configmap/deployment-with-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment-with-cm
  labels:
    app: httpd-with-cm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-with-cm
  template:
    metadata:
      labels:
        app: httpd-with-cm
    spec:
      containers:
      - name: httpd
        image: registry.redhat.io/rhel8/python-38:latest
        resources:
          limits:
            cpu: "250m"
            memory: "100Mi"
        command:
        - bash
        args:
          - -c
          - python -m http.server 8080
        volumeMounts:
          - name: config-volume
            mountPath: /opt/app-root/src
      volumes:
      - name: config-volume
        configMap:
          name: httpconfig
