configmap/service-with-cm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service-with-cm
spec:
  selector:
    app: httpd-with-cm
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
